--- a/public/styles.css
+++ b/public/styles.css
@@ -1,17 +1,19 @@
 body {
   display: flex;
-    font-family: Arial, sans-serif;
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 2rem;
-    flex-direction: column;
+  font-family: Arial, sans-serif;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 2rem;
+  flex-direction: column;
+  background-color: #222;
+  color: #f0f0f0;
 }
-
 
 .title {
   font-family: 'Roboto Mono', monospace;
-  font-size: 60px;
+  font-size: 70px;
   margin-bottom: 50px;
+  color: #ffffff;
 }
 
 p {
@@ -20,36 +22,57 @@ p {
 a {
   font-family: 'Noto Sans', sans-serif;
   text-decoration: none;
+  color: #a0c0ff;
 }
 #url-converter {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 label {
   display: block;
   text-align: center;
   font-family: 'Noto Sans', sans-serif;
+  color: #ffffff;
 }
 
 input {
-    margin: 0.5rem 0;
-    padding: 0.5rem;
-    font-size: 1rem;
-    width: 100%;
-    box-sizing: border-box;
-    font-family: 'Noto Sans', sans-serif;
+  margin: 0.5rem 0;
+  padding: 0.5rem;
+  font-size: 1rem;
+  width: 100%;
+  box-sizing: border-box;
+  font-family: 'Noto Sans', sans-serif;
+  background-color: #333;
+  color: #f0f0f0;
+  border: 1px solid #444;
+  transition: 0.5s all ease-in-out;
+}
+
+
+input:focus {
+  outline: none;
+  background-color: #444;
+  border: 1px solid #333;
 }
 
 button {
-    padding: 0.5rem;
-    font-size: 1rem;
-    cursor: pointer;
-    font-family: 'Noto Sans', sans-serif;
+  padding: 0.5rem;
+  font-size: 1rem;
+  cursor: pointer;
+  font-family: 'Noto Sans', sans-serif;
+  background-color: #444;
+  color: #ffffff;
+  border: none;
+  transition: 0.5s all ease-in-out;
+}
+
+button:hover {
+  background-color: #555
 }
 
 #converted-url-container {
-    margin-top: 1rem;
+  margin-top: 1rem;
 }
 
 .centered {
@@ -57,10 +80,11 @@ button {
 }
 
 footer {
-      position: absolute;
-      bottom: 0;
-      left: 50%;
-      transform: translateX(-50%);
-      background: none;
-      text-align: center;
-    }
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  background: none;
+  text-align: center;
+  color: #f0f0f0;
+}
