--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans&family=Lexend&family=Tilt+Warp&display=swap');
 body {
   display: flex;
   font-family: Arial, sans-serif;
@@ -10,7 +11,8 @@ body {
 }
 
 .title {
-  font-family: 'Roboto Mono', monospace;
+  font-family: 'Tilt Warp';
+  font-weight: 400;
   font-size: 70px;
   margin-bottom: 50px;
   color: #ffffff;
@@ -49,6 +51,18 @@ input {
   transition: 0.5s all ease-in-out;
 }
 
+.linkbutton {
+  margin: 0.5rem 0;
+  padding: 0.5rem;
+  font-size: 1rem;
+  width: 250px;
+  box-sizing: border-box;
+  font-family: 'Noto Sans', sans-serif;
+  background-color: #333;
+  color: #f0f0f0;
+  border: 1px solid #444;
+  transition: 0.5s all ease-in-out;
+}
 
 input:focus {
   outline: none;
